--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,7 @@
 		"codeigniter4/framework": "^4.5.5",
 		"codeigniter4/shield": "^1.1.0"
 	},
-	"homepage": "https://easycms.fklavye.net"
+	"homepage": "https://easycms.fklavye.net",
+	"minimum-stability": "dev",
+	"prefer-stable": true,
 }
