--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,12 @@
 {
-	"name": "obozdag/easycms",
-	"description": "Create and manage websites easily",
-	"license": "MIT",
-	"require": {
-		"php": ">=8.2",
-		"codeigniter4/framework": "^4.5.5",
-		"codeigniter4/shield": "^1.1.0"
-	},
-	"homepage": "https://easycms.fklavye.net"
+    "name": "obozdag/easycms",
+    "description": "Create and manage websites easily",
+    "license": "MIT",
+    "type": "project",
+    "require": {
+        "php": ">=8.2",
+        "codeigniter4/framework": "^4.5.5",
+        "codeigniter4/shield": "^1.1.0"
+    },
+    "homepage": "https://easycms.fklavye.net"
 }
