--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,8 @@
     "name": "obozdag/easycms",
     "description": "Create and manage websites easily",
     "license": "MIT",
-    "type": "project",
     "require": {
-        "php": ">=8.2",
+        "php": "^8.3",
         "codeigniter4/framework": "^4.5.5",
         "codeigniter4/settings": "^2.1",
         "codeigniter4/shield": "^1.1.0"
